# py-jessiql

./: .envrc  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  mypy.ini  noxfile.py  play.py  pyproject.toml
.github/workflows/: tests.yml
jessiql/: __init__.py  exc.py  typing.py
jessiql/engine/: __init__.py  jessiql.py  jselectinloader.py  loader.py  query.py  query_executor.py  settings.py
jessiql/features/: __init__.py
jessiql/integration/: __init__.py
jessiql/operations/: __init__.py  base.py  filter.py  select.py  skiplimit.py  sort.py
jessiql/query/: __init__.py  jessiql.py  jselectinloader.py  loader.py  query.py  query_executor.py
jessiql/query_object/: __init__.py  base.py  encode.py  filter.py  limit.py  pager.py  query_object.py  resolve.py  select.py  skip.py  sort.py
jessiql/sainfo/: __init__.py  columns.py  format.py  models.py  names.py  primary_key.py  properties.py  relations.py  version.py
jessiql/sautil/: __init__.py  adapt.py  properties.py
jessiql/testing/: __init__.py  insert.py  profile.py  query_logger.py  recreate_tables.py  stmt_text.py  table_data.py
jessiql/util/: dataclasses.py  expressions.py  funcy.py  sacompat.py
tests/: conftest.py  globals.py  test_filter.py  test_integration_fastapi.py  test_integration_graphql.py  test_integration_graphql_selection.py  test_mypy.py  test_operation_filter.py  test_operation_select.py  test_operation_skiplimit.py  test_operation_sort.py  test_query.py  test_query_object.py  test_skiplimit.py  test_sort.py  test_test.py
tests/util/: models.py  okok.py  py.py  sa.py  (+1 more)
(+66 files in other folders)
