[tool.poetry]
name = "jessiql"
version = "0.0.1"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-jessiql'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
