[tool.poetry]
name = "jessiql"
version = "0.0.1"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-jessiql'
include = ["jessiql/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = ">=1.4.14"
fastapi = {version = ">=0.51", optional = true}
graphql-core = {version = ">=3.0.0", optional = true}

[tool.poetry.dev-dependencies]
nox = ">=2020.8.22"
pytest = ">=6.0.1"
pytest-cov = ">=2.10.1"
psycopg2 = ">=2.8.6"
sqlalchemy-stubs = ">=0.4"
pydantic = ">=1.6.0"
fastapi = ">=0.51.0"
requests = ">=2.25.1"
graphql-core = ">=3.0.0"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
